Remove bogus assertion at jsdbgapi.cpp:781. Bug 635195, r=jorendorff, a=dmandelin.